--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>令和ガールズ｜SNS運用・インフルエンサー支援・アパレル制作</title>
-	<meta name="description" content="REIWAGIRLSはSNS運用代行、モデルキャスティング、アパレルブランド制作などを通じて、女性の“好き”を仕事に変えるサポートを行うプロデュース企業です。">
+	<meta name="description" content="令和ガールズはSNS運用代行、モデルキャスティング、アパレルブランド制作などを通じて、女性の“好き”を仕事に変えるサポートを行うプロデュース企業です。">
 	<meta name="keywords" content="令和ガールズ, SNS運用代行, インフルエンサー支援, モデルキャスティング, アパレル制作, ライブ配信, PR案件">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="REIWAGIRLS Inc.">
@@ -146,7 +146,7 @@
 			</linearGradient>
 		</defs>
 		<text id="text-outline" x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-size="64"
-			font-family="sans-serif">令和GIRLS</text>
+			font-family="sans-serif">令和ガールズ</text>
 	</svg>
 
 	<!-- ヘッダー / ヒーローセクション -->
@@ -262,7 +262,12 @@
 			<div class="services">
 				<p>◇インフルエンサーマーケティング</p>
 				<p>◇モデルキャスティング</p>
-				<p>◇アパレルプロデュース</p>
+				<p>◇アパレルブランドプロデュース</p>
+				<p>◇アクセサリーブランドプロデュース</p>
+				<p>◇ライブ配信事務所</p>
+				<p>◇令和ガールズ-フランチャイズサービス</p>
+				<p>◇動画クリエイター育成事務所</p>
+				<p>◇インフルエンサープロデュース</p>
 			</div>
 			<div class="catch-wrapper">
 				<h1 class="outlined-text animate-text .fade-out-up-smooth">
@@ -378,7 +383,7 @@
 
 		<section class="service-hero theme-blue-text" id="section1">
 			<section class="about-service">
-				<h2 class="reiwaGirls-serviceContent-title">令和GIRLSの提供サービス</h2>
+				<h2 class="reiwaGirls-serviceContent-title">令和ガールズの提供サービス</h2>
 				<p style="display: none;">インフルエンサーのキャスティング、SNSの企画・運用代行、アパレルブランド立ち上げ支援、ライブ配信・PR案件獲得支援などを行っています。</p
 					style="display: none;">
 			</section>
@@ -440,7 +445,7 @@
 		<section class="service-hero theme-gold-text" id="section-bottle">
 			<div class="service-inner">
 				<h1 data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
-					<span>美を纏う世界観を</span><br><span class="service-title">ボトルビジュー制作</span>
+					<span>美を纏う世界観を</span><br><span class="service-title">アクセサリーブランド制作</span>
 				</h1>
 				<!--				<p data-aos="fade-up" data-aos-delay="150" data-aos-duration="1000" class="lead">-->
 				<!--					デザイン設計からプロダクト開発、SNS展開まで。<br>-->
