NextStarsロゴ修正と、採用ページ修正

--- a/recruit.html
+++ b/recruit.html
@@ -26,7 +26,7 @@
 	<meta name="twitter:title" content="採用情報｜株式会社令和ガールズ">
 	<meta name="twitter:description" content="多様な働き方と夢を支援。REIWAGIRLSの採用情報はこちら。">
 	<meta name="twitter:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
-	
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 	<!-- 構造化データ Organization -->
@@ -145,52 +145,266 @@
 		</div>
 
 		<div class="recruit-tab-buttons">
-			<button class="recruit-tab-button active" data-tab="idol">採用体制準備中・・・</button>
-			<!--			<button class="recruit-tab-button active" data-tab="idol">アイドル</button>-->
-			<!--			<button class="recruit-tab-button" data-tab="liver">ライバー</button>-->
-			<!--			<button class="recruit-tab-button" data-tab="office">事務</button>-->
-			<!--			<button class="recruit-tab-button" data-tab="pr">広報</button>-->
+			<button class="recruit-tab-button active" data-tab="idol">営業職</button>
+			<button class="recruit-tab-button" data-tab="liver">動画編集者</button>
+			<button class="recruit-tab-button" data-tab="marketing">マーケティング職</button>
+			<button class="recruit-tab-button" data-tab="admin">事務職</button>
 		</div>
 
 		<div id="idol" class="recruit-tab-content active">
-			<p>ただいま、採用準備中です。</p>
+			<p><strong>🔷営業職</strong></p>
+
+			<p><strong>◉仕事内容</strong><br>
+				・企業へのSNSマーケティング／キャスティング提案営業<br>
+				・ヒアリング〜課題抽出〜企画提案〜契約までの一連対応<br>
+				・見積作成／提案資料の作成（テンプレあり）<br>
+				・アフターフォロー／継続提案／アップセル戦略の立案<br>
+				・撮影や投稿進行の社内連携（ディレクター／編集者との連携）<br>
+				・SNSマーケティング事業の仕組みづくり・改善にも関われます
+			</p>
+
+			<p><strong>◉こんな方を歓迎します</strong><br>
+				・営業経験がある方（法人・個人問わず）<br>
+				・SNSやトレンドに対する興味関心が強い方<br>
+				・新しい商品や企画を“売る”より“伝える”のが好きな方<br>
+				・数字にもアイデアにも強い“企画営業”をやってみたい方
+			</p>
+
+			<p><strong>◉募集要項</strong></p>
+
+			<p><strong>雇用形態</strong><br>
+				正社員（試用期間3ヶ月／条件変更なし）
+			</p>
+
+			<p><strong>勤務地</strong><br>
+				東京都港区麻布十番（オフィス勤務）<br>
+				※クライアント訪問や撮影同行あり／一部リモート応相談
+			</p>
+
+			<p><strong>勤務時間</strong><br>
+				10:00〜19:00（実働8時間／休憩1時間）<br>
+				※フレックス制度あり（相談可）
+			</p>
+
+			<p><strong>給与</strong><br>
+				月給27万円〜40万円＋インセンティブ<br>
+				※営業経験・業界経験・成果実績により優遇<br>
+				※四半期・月間の成績に応じてインセンティブあり（上限なし）
+			</p>
+
+			<p><strong>昇給・賞与</strong><br>
+				・昇給：年1回（業績・本人評価による）<br>
+				・賞与：年2回支給（業績・成果に応じて）<br>
+				・インセンティブ：月次・四半期ごとに支給制度あり
+			</p>
+
+			<p><strong>休日休暇</strong><br>
+				・完全週休2日制（土日）<br>
+				・祝日<br>
+				・年末年始／GW／夏季休暇<br>
+				・有給休暇<br>
+				・推し活休暇（応援する推しのイベントに合わせて取得可能）
+			</p>
+
+			<p><strong>福利厚生</strong><br>
+				・交通費全額支給（上限あり）<br>
+				・社会保険完備<br>
+				・SNS通信手当（月5,000円）<br>
+				・書籍購入／セミナー参加費補助<br>
+				・服装自由
+			</p>
 		</div>
 
-		<!--		<div id="idol" class="recruit-tab-content active">-->
-		<!--			<p><strong>給与</strong><br>完全歩合制（月収例：40万円〜150万円）＋成果ボーナス</p>-->
-		<!--			<p><strong>諸手当詳細</strong><br>交通費補助：上限20,000円/月、撮影衣装補助あり</p>-->
-		<!--			<p><strong>昇給賞与</strong><br>成果評価により随時昇給・特別ボーナス支給あり</p>-->
-		<!--			<p><strong>就業時間</strong><br>シフト制（週3日〜、1日4時間〜応相談）</p>-->
-		<!--			<p><strong>休日休暇</strong><br>希望シフト制／オフ日は本人希望による</p>-->
-		<!--			<p><strong>福利厚生</strong><br>メディア出演支援・撮影機材貸与・SNS運用サポート・レッスン制度</p>-->
-		<!--		</div>-->
 
-		<!--		<div id="liver" class="recruit-tab-content">-->
-		<!--			<p><strong>給与</strong><br>月額報酬：基本歩合制（配信成果に応じて変動）<br>＋月間ボーナス（上限なし）</p>-->
-		<!--			<p><strong>諸手当詳細</strong><br>配信機材貸与・Wi-Fi通信補助・エージェント伴走あり</p>-->
-		<!--			<p><strong>昇給賞与</strong><br>実績次第で配信インセンティブUP／特別手当あり</p>-->
-		<!--			<p><strong>就業時間</strong><br>自由（自己裁量）※推奨：週15時間以上</p>-->
-		<!--			<p><strong>休日休暇</strong><br>完全自由／個人スケジュールに準ずる</p>-->
-		<!--			<p><strong>福利厚生</strong><br>ライバー育成支援・SNS拡散支援・報酬前払い制度・コラボ紹介あり</p>-->
-		<!--		</div>-->
+		<div id="liver" class="recruit-tab-content">
+			<p><strong>🔷動画編集者</strong></p>
 
-		<!--		<div id="office" class="recruit-tab-content">-->
-		<!--			<p><strong>給与</strong><br>月給：254,300円（基本月額：220,300円、諸手当：34,000円）</p>-->
-		<!--			<p><strong>諸手当詳細</strong><br>住宅手当：15,000円／食事補助：5,000円／通勤手当：実費支給</p>-->
-		<!--			<p><strong>昇給賞与</strong><br>年1回昇給（7月）<br>年2回賞与（6月、12月）</p>-->
-		<!--			<p><strong>就業時間</strong><br>9:30〜18:00（休憩1時間）</p>-->
-		<!--			<p><strong>休日休暇</strong><br>完全週休2日制（土日）／祝日／年末年始休暇／夏季休暇（5日）</p>-->
-		<!--			<p><strong>福利厚生</strong><br>社会保険完備／社内研修制度／健康診断／私服勤務OK</p>-->
-		<!--		</div>-->
+			<p><strong>◉仕事内容</strong><br>
+				・TikTok／Instagram／YouTube ShortsなどSNS向け動画の編集<br>
+				・Premiere Pro / CapCutなどを使った編集業務<br>
+				・エンタメ系（恋愛系コント・日常系・求人系など）の編集がメイン<br>
+				・動画の構成改善やアルゴリズム分析をもとにした提案も歓迎
+			</p>
 
-		<!--		<div id="pr" class="recruit-tab-content">-->
-		<!--			<p><strong>給与</strong><br>月給：278,300円（基本月額：244,300円、諸手当：34,000円）</p>-->
-		<!--			<p><strong>諸手当詳細</strong><br>SNS手当：10,000円／住宅手当：15,000円／通勤手当：上限20,000円</p>-->
-		<!--			<p><strong>昇給賞与</strong><br>実績に応じた年1回昇給＋評価型年2回賞与</p>-->
-		<!--			<p><strong>就業時間</strong><br>10:00〜19:00（フレックスタイム制／コアタイム：11:00〜16:00）</p>-->
-		<!--			<p><strong>休日休暇</strong><br>週休2日制（土日祝）／年間休日120日以上／リフレッシュ休暇</p>-->
-		<!--			<p><strong>福利厚生</strong><br>広報活動費支給／推奨書籍購入補助／副業OK／オンライン研修支援</p>-->
-		<!--		</div>-->
+			<p><strong>◉こんな方を歓迎します</strong><br>
+				・TikTokなどのSNSで動画を「観るのも作るのも好き」な方<br>
+				・編集ソフトを使った動画制作の実務経験がある方（業界不問）<br>
+				・エンタメ・笑い・トレンドに敏感で、発想力豊かな方<br>
+				・インフルエンサーと一緒にバズる動画を作ってみたい方
+			</p>
+
+			<p><strong>◉募集要項</strong></p>
+
+			<p><strong>雇用形態</strong><br>
+				正社員（試用期間3ヶ月あり ※条件変更なし）
+			</p>
+
+			<p><strong>勤務地</strong><br>
+				東京都港区麻布十番（オフィス兼スタジオ）<br>
+				※リモートワーク可
+			</p>
+
+			<p><strong>勤務時間</strong><br>
+				10:00〜19:00（実働8時間・休憩1時間）<br>
+				※希望によりフレックス相談可
+			</p>
+
+			<p><strong>給与</strong><br>
+				月給25万円～35万円<br>
+				※経験・能力・ポートフォリオ等を考慮し決定<br>
+				※固定残業代含む（超過分は別途支給）
+			</p>
+
+			<p><strong>昇給・賞与</strong><br>
+				・昇給：年1回（業績・本人評価による）<br>
+				・賞与：年2回支給（業績・成果に応じて）<br>
+				※業績に応じてインセンティブ制度あり
+			</p>
+
+			<p><strong>休日休暇</strong><br>
+				・完全週休2日制（土日）<br>
+				・祝日<br>
+				・年末年始／GW／夏季休暇<br>
+				・有給休暇<br>
+				・推し活休暇（応援する推しのイベントに合わせて取得可能）
+			</p>
+
+			<p><strong>福利厚生</strong><br>
+				・交通費全額支給（上限あり）<br>
+				・社会保険完備<br>
+				・SNS通信手当（月5,000円）<br>
+				・書籍購入／セミナー参加費補助<br>
+				・服装・髪型自由（ピアス・ネイルもOK）<br>
+				・無料スキル研修
+			</p>
+		</div>
+
+		<div id="marketing" class="recruit-tab-content">
+			<p><strong>🔷マーケティング職</strong></p>
+
+			<p><strong>◉仕事内容</strong><br>
+				・KPI設計、数値分析、改善提案のPDCA運用<br>
+				・SNSを活用した採用・販促マーケティング戦略の提案<br>
+				・TikTok・Instagram等SNSアカウントの企画立案・運用管理<br>
+				・インフルエンサーキャスティングの調整・進行<br>
+				・クライアントへのレポーティング・コンサルティング業務<br>
+				・撮影現場への同行・演出サポート（希望者）
+			</p>
+
+			<p><strong>◉こんな方を歓迎します</strong><br>
+				・マーケティングやブランディングに興味がある方<br>
+				・コミュニケーション能力に自信があり、主体的に動ける方<br>
+				・「数字を見るのが苦じゃない」×「アイデアを出すのが好き」な方<br>
+				・常にトレンドをキャッチし続けることが得意な方
+			</p>
+
+			<p><strong>◉募集要項</strong></p>
+
+			<p><strong>雇用形態</strong><br>
+				正社員（試用期間3ヶ月あり／条件変更なし）
+			</p>
+
+			<p><strong>勤務地</strong><br>
+				東京都港区麻布十番（オフィス勤務／一部リモート相談可）
+			</p>
+
+			<p><strong>勤務時間</strong><br>
+				10:00〜19:00（実働8時間／休憩1時間）<br>
+				※フレックス制度あり（チーム状況に応じて）
+			</p>
+
+			<p><strong>給与</strong><br>
+				月給28万円〜40万円<br>
+				※経験・スキル・前職給与を考慮し決定<br>
+				※インフルエンサー運用経験者・マーケ実務経験者は優遇
+			</p>
+
+			<p><strong>昇給・賞与</strong><br>
+				・昇給：年1回（業績・本人評価による）<br>
+				・賞与：年2回支給（業績・成果に応じて）
+			</p>
+
+			<p><strong>休日休暇</strong><br>
+				・完全週休2日制（土日）<br>
+				・祝日<br>
+				・年末年始／GW／夏季休暇<br>
+				・有給休暇<br>
+				・推し活休暇（応援する推しのイベントに合わせて取得可能）
+			</p>
+
+			<p><strong>福利厚生</strong><br>
+				・交通費全額支給（上限あり）<br>
+				・社会保険完備<br>
+				・SNS通信手当（月5,000円）<br>
+				・書籍購入／セミナー参加費補助<br>
+				・服装・髪型自由（ピアス・ネイルもOK）
+			</p>
+		</div>
+
+		<div id="admin" class="recruit-tab-content">
+			<p><strong>🔷事務職</strong></p>
+
+			<p><strong>◉仕事内容</strong><br>
+				・請求書・契約書の作成／管理<br>
+				・顧客リスト/SNS投稿カレンダーなどのデータ管理<br>
+				・クライアント対応のメール送受信や資料送付<br>
+				・各種事務用品の発注や備品管理<br>
+				・社内SNSチーム/営業チームの進行サポート<br>
+				・簡単なリサーチ業務/SNSアカウントの投稿予約補助 など
+			</p>
+
+			<p><strong>◉こんな方を歓迎します</strong><br>
+				・事務/バックオフィス業務の経験がある方（業界不問）<br>
+				・GoogleスプレッドシートやExcelが使える方<br>
+				・小さなことでもコツコツ進めるのが得意な方<br>
+				・社内外とのコミュニケーションに抵抗がない方<br>
+				・柔軟に変化する環境を楽しめる方
+			</p>
+
+			<p><strong>◉募集要項</strong></p>
+
+			<p><strong>雇用形態</strong><br>
+				正社員（試用期間3ヶ月／条件変更なし）
+			</p>
+
+			<p><strong>勤務地</strong><br>
+				東京都港区麻布十番（オフィス勤務）<br>
+				※リモートワーク可
+			</p>
+
+			<p><strong>勤務時間</strong><br>
+				10:00〜19:00（実働8時間／休憩1時間）<br>
+				※時差出勤制度あり（9時〜11時の間で始業可）
+			</p>
+
+			<p><strong>給与</strong><br>
+				月給22万円〜28万円<br>
+				※経験・スキル・実務内容を考慮し決定<br>
+				※事務経験1年以上の方は優遇あり
+			</p>
+
+			<p><strong>昇給・賞与</strong><br>
+				・昇給：年1回（業績・本人評価による）<br>
+				・賞与：年2回支給（業績・成果に応じて）
+			</p>
+
+			<p><strong>休日休暇</strong><br>
+				・完全週休2日制（土日）<br>
+				・祝日<br>
+				・年末年始／GW／夏季休暇<br>
+				・有給休暇<br>
+				・推し活休暇（応援する推しのイベントに合わせて取得可能）
+			</p>
+
+			<p><strong>福利厚生</strong><br>
+				・交通費全額支給（上限あり）<br>
+				・社会保険完備<br>
+				・SNS通信手当（月5,000円）<br>
+				・書籍購入／セミナー参加費補助<br>
+				・服装・髪型自由（ピアス・ネイルもOK）
+			</p>
+		</div>
+
 
 		<div class="recruit-second-title">
 			<h2 class="recruit-second-title-title">SELECTION PROCESS</h2>
@@ -257,9 +471,9 @@
 					<a href="recruit.html" class="transition-link">RECRUIT</a>
 					<a href="contact.html" class="transition-link">CONTACT</a>
 				</div>
-<!--				<div class="footer-contact">-->
-<!--					<a href="contact.html" class="footer-contact-button transition-link">CONTACT</a>-->
-<!--				</div>-->
+				<!--				<div class="footer-contact">-->
+				<!--					<a href="contact.html" class="footer-contact-button transition-link">CONTACT</a>-->
+				<!--				</div>-->
 			</div>
 
 			<div class="scroll-infinity">
@@ -301,19 +515,19 @@
 
 		</div>
 	</footer>
-	
+
 	<!-- 画面トランジション背景（10分割） -->
 	<div class="page-transition-bg">
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
 	</div>
 
 
