採用情報修正

--- a/recruit.html
+++ b/recruit.html
@@ -146,7 +146,7 @@
 
 		<div class="recruit-tab-buttons">
 			<button class="recruit-tab-button active" data-tab="idol">営業職</button>
-			<button class="recruit-tab-button" data-tab="liver">動画編集者</button>
+			<button class="recruit-tab-button" data-tab="liver">動画クリエイター</button>
 			<button class="recruit-tab-button" data-tab="marketing">マーケティング職</button>
 			<button class="recruit-tab-button" data-tab="admin">事務職</button>
 		</div>
@@ -217,7 +217,7 @@
 
 
 		<div id="liver" class="recruit-tab-content">
-			<p><strong>🔷動画編集者</strong></p>
+			<p><strong>🔷動画クリエイター</strong></p>
 
 			<p><strong>◉仕事内容</strong><br>
 				・TikTok／Instagram／YouTube ShortsなどSNS向け動画の編集<br>
@@ -250,7 +250,7 @@
 			</p>
 
 			<p><strong>給与</strong><br>
-				月給25万円～35万円<br>
+				月給35万円～40万円<br>
 				※経験・能力・ポートフォリオ等を考慮し決定<br>
 				※固定残業代含む（超過分は別途支給）
 			</p>
