ファビコン追加

--- a/recruit.html
+++ b/recruit.html
@@ -10,6 +10,12 @@
 	<meta name="author" content="REIWAGIRLS Inc.">
 	<meta name="theme-color" content="#ffffff">
 
+	<!-- タブに表示されるファビコン（検索結果にも使われる） -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+
+	<!-- PNGを使いたい場合（推奨） -->
+	<link rel="icon" href="favicon.png" type="image/png">
+
 	<!-- Canonical -->
 	<link rel="canonical" href="https://reiwagirls.co.jp/recruit.html">
 	<link rel="icon" href="/favicon.ico">
@@ -250,7 +256,8 @@
 			</p>
 
 			<p><strong>給与</strong><br>
-				月給35万円～40万円<br>
+				経験者：月給40万円～45万円<br>
+				未経験者：月給25万円～30万円<br>
 				※経験・能力・ポートフォリオ等を考慮し決定<br>
 				※固定残業代含む（超過分は別途支給）
 			</p>
