--- a/top.html
+++ b/top.html
@@ -10,6 +10,13 @@
 	<meta name="author" content="REIWAGIRLS Inc.">
 	<meta name="theme-color" content="#ffffff">
 
+	<!-- タブに表示されるファビコン（検索結果にも使われる） -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+
+	<!-- PNGを使いたい場合（推奨） -->
+	<link rel="icon" href="favicon.png" type="image/png">
+
+
 	<!-- Canonical -->
 	<link rel="canonical" href="https://reiwagirls.co.jp/top.html">
 	<link rel="icon" href="/favicon.ico">
@@ -26,7 +33,7 @@
 	<meta name="twitter:title" content="企業理念｜株式会社令和ガールズ">
 	<meta name="twitter:description" content="未来を創造する企業、REIWAGIRLSの企業理念ページ。">
 	<meta name="twitter:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
-	
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 	<!-- 構造化データ Organization -->
@@ -287,9 +294,9 @@
 					<a href="recruit.html" class="transition-link">RECRUIT</a>
 					<a href="contact.html" class="transition-link">CONTACT</a>
 				</div>
-<!--				<div class="footer-contact">-->
-<!--					<a href="contact.html" class="footer-contact-button transition-link">CONTACT</a>-->
-<!--				</div>-->
+				<!--				<div class="footer-contact">-->
+				<!--					<a href="contact.html" class="footer-contact-button transition-link">CONTACT</a>-->
+				<!--				</div>-->
 			</div>
 
 			<div class="scroll-infinity">
@@ -331,19 +338,19 @@
 
 		</div>
 	</footer>
-	
+
 	<!-- 画面トランジション背景（10分割） -->
 	<div class="page-transition-bg">
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
 	</div>
 
 
