--- a/company.html
+++ b/company.html
@@ -11,6 +11,11 @@
 	<meta name="theme-color" content="#ffffff">
 	<meta name="format-detection" content="telephone=no">
 
+	<!-- タブに表示されるファビコン（検索結果にも使われる） -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+
+	<!-- PNGを使いたい場合（推奨） -->
+	<link rel="icon" href="favicon.png" type="image/png">
 
 	<!-- Canonical -->
 	<link rel="canonical" href="https://reiwagirls.co.jp/company.html">
@@ -28,7 +33,7 @@
 	<meta name="twitter:title" content="会社概要｜株式会社令和ガールズ">
 	<meta name="twitter:description" content="令和ガールズの会社情報ページ。事業内容、設立、所在地をご確認いただけます。">
 	<meta name="twitter:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
-	
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 	<!-- 構造化データ Organization -->
@@ -320,9 +325,9 @@
 					<a href="recruit.html" class="transition-link">RECRUIT</a>
 					<a href="contact.html" class="transition-link">CONTACT</a>
 				</div>
-<!--				<div class="footer-contact">-->
-<!--					<a href="contact.html" class="footer-contact-button transition-link">CONTACT</a>-->
-<!--				</div>-->
+				<!--				<div class="footer-contact">-->
+				<!--					<a href="contact.html" class="footer-contact-button transition-link">CONTACT</a>-->
+				<!--				</div>-->
 			</div>
 
 			<div class="scroll-infinity">
@@ -364,19 +369,19 @@
 
 		</div>
 	</footer>
-	
+
 	<!-- 画面トランジション背景（10分割） -->
 	<div class="page-transition-bg">
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
 	</div>
 
 
