--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,13 @@
 	<meta name="theme-color" content="#ffffff">
 	<meta name="format-detection" content="telephone=no">
 
+	<!-- タブに表示されるファビコン（検索結果にも使われる） -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+
+	<!-- PNGを使いたい場合（推奨） -->
+	<link rel="icon" href="favicon.png" type="image/png">
+
+
 	<!-- Canonical -->
 	<link rel="canonical" href="https://reiwagirls.co.jp/contact.html">
 	<link rel="icon" href="/favicon.ico">
@@ -27,7 +34,7 @@
 	<meta name="twitter:title" content="お問い合わせ｜株式会社令和ガールズ">
 	<meta name="twitter:description" content="SNSプロデュース・PR支援・ブランド制作のご相談はこちらから。">
 	<meta name="twitter:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
-	
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 	<!-- 構造化データ Organization -->
@@ -224,9 +231,9 @@
 					<a href="recruit.html" class="transition-link">RECRUIT</a>
 					<a href="contact.html" class="transition-link">CONTACT</a>
 				</div>
-<!--				<div class="footer-contact">-->
-<!--					<a href="contact.html" class="footer-contact-button transition-link">CONTACT</a>-->
-<!--				</div>-->
+				<!--				<div class="footer-contact">-->
+				<!--					<a href="contact.html" class="footer-contact-button transition-link">CONTACT</a>-->
+				<!--				</div>-->
 			</div>
 
 			<div class="scroll-infinity">
@@ -268,19 +275,19 @@
 
 		</div>
 	</footer>
-	
+
 	<!-- 画面トランジション背景（10分割） -->
 	<div class="page-transition-bg">
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
-	  <div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
+		<div class="bg-content"></div>
 	</div>
 
 	<script src="js/header-mobile.js"></script>
