--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="REIWAGIRLS Inc.">
 	<meta name="theme-color" content="#ffffff">
+	
+	<!-- タブに表示されるファビコン（検索結果にも使われる） -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+
+	<!-- PNGを使いたい場合（推奨） -->
+	<link rel="icon" href="favicon.png" type="image/png">
+
 
 	<!-- Canonical -->
 	<link rel="canonical" href="https://reiwagirls.co.jp/">
