--- a/service.html
+++ b/service.html
@@ -10,6 +10,12 @@
 	<meta name="author" content="REIWAGIRLS Inc.">
 	<meta name="theme-color" content="#ffffff">
 
+	<!-- タブに表示されるファビコン（検索結果にも使われる） -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+
+	<!-- PNGを使いたい場合（推奨） -->
+	<link rel="icon" href="favicon.png" type="image/png">
+
 	<!-- Canonical -->
 	<link rel="canonical" href="https://www.reiwagirls.co.jp/service.html">
 	<link rel="icon" href="/favicon.ico">
@@ -790,9 +796,9 @@
 					<a href="recruit.html" class="transition-link">RECRUIT</a>
 					<a href="contact.html" class="transition-link">CONTACT</a>
 				</div>
-<!--				<div class="footer-contact">-->
-<!--					<a href="contact.html" class="footer-contact-button transition-link">CONTACT</a>-->
-<!--				</div>-->
+				<!--				<div class="footer-contact">-->
+				<!--					<a href="contact.html" class="footer-contact-button transition-link">CONTACT</a>-->
+				<!--				</div>-->
 			</div>
 
 			<div class="scroll-infinity">
