--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,8 @@
 					<div class="company-overview-content">
 						本社<br>
 						〒108-0073<br>
-						東京都港区三田1-11-22 SSTビル1階
+						東京都港区三田1-11-22<br>
+						SSTビル1階
 					</div>
 				</div>
 
