--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<meta name="theme-color" content="#ffffff">
 	
 	<!-- タブに表示されるファビコン（検索結果にも使われる） -->
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 	<!-- PNGを使いたい場合（推奨） -->
-	<link rel="icon" href="favicon.png" type="image/png">
+	<link rel="icon" href="/favicon.png" type="image/png">
 
 
 	<!-- Canonical -->
